fixing sizing and overlapping
changing sizing and grid area to stop the content from overlapping each other. i'm messing around with the sizing to see what works

--- a/css/screen.css
+++ b/css/screen.css
@@ -211,7 +211,7 @@ label {
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
-   font-family: 'Poppins', "Josefin Slab", serif !important;
+   font-family: 'Poppins', 'Josefin Slab', serif !important;
    background-color: #aaaaae;
    display: flex;
    justify-content: center;
@@ -229,6 +229,9 @@ form {
    width: 95%;
    max-width: 600px;
    margin: 20px auto;
+
+   display: flex;
+   flex-direction: column;
 }
 
 
@@ -303,6 +306,11 @@ input[type="checkbox"] {
    flex-wrap: nowrap;
 }
 
+form p {
+  margin: 0 0 15px 0;
+  text-align: left;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -312,22 +320,32 @@ form {
 @media (min-width: 768px) {
    form {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: auto;
     grid-template-areas: 
-        "heading";
+        "heading p"
+        "heading content";
     align-items: start;
-    max-width: 700px;
+    column-gap: 40px;
+    row-gap: 20px;
+    max-width: 800px;
    }
 
    form h1 {
     grid-area: heading;
-    padding-right: 20px;
     margin-top: 0;
    }
 
-   form > p,
-   form > ol {
-    grid-area: content;
+   form p {
+    grid-area: p;
+    margin: 0 0 15px 0;
    }
+
+   form ol {
+    grid-area: content;
+    text-align: left;
+    margin: 0;
+   }
+
 
 }
